# PolyDock

./: .gitmodules  LICENSE  README.md
PolyDock/: CMakeLists.txt
PolyDock/PolyDock/: CMakeLists.txt
PolyDock/PolyDock/res/: Resource.qrc
PolyDock/PolyDock/src/pd/: DockWidgetHandle.cpp  DockWidgetHandle.hpp  PolyDockRegistry.cpp  PolyDockRegistry.hpp  TabbedWindowControlHandle.cpp  TabbedWindowControlHandle.hpp  TabbedWindowHandle.cpp  TabbedWindowHandle.hpp  TabsHeaderHandle.cpp  TabsHeaderHandle.hpp  WindowTabHandle.cpp  WindowTabHandle.hpp
PolyDock/PolyDock/src/pd/PCH/: PCH.h
PolyDock/PolyDock/src/pd/ecs/cmp/dock/: Dock.hpp  DockComponent.hpp  DockRequestComponent.hpp  DockWidgetComponent.hpp  Docking.hpp  UndockRequestComponent.hpp  UpdateDockWidgetRequestComponent.hpp
PolyDock/PolyDock/src/pd/ecs/cmp/root/: Desktop.hpp  DesktopComponent.hpp  Input.hpp  InputComponent.hpp  RootComponent.hpp  WidgetsOwner.hpp  WidgetsOwnerComponent.hpp
PolyDock/PolyDock/src/pd/ecs/cmp/tab/: DirtyTabComponent.hpp  DirtyTabContentComponent.hpp  TabComponent.hpp  TabContentComponent.hpp
PolyDock/PolyDock/src/pd/ecs/cmp/tabbedWindow/: Closing.hpp  DirtyTabbedWindowComponent.hpp  Movement.hpp  Opening.hpp  Resizing.hpp  Snapping.hpp  TabbedWindow.hpp  TabbedWindowCloseRequestComponent.hpp  TabbedWindowComponent.hpp  TabbedWindowCreateRequestComponent.hpp  TabbedWindowFocusComponent.hpp  TabbedWindowMaximizeRequestComponent.hpp  TabbedWindowMinimizeRequestComponent.hpp  TabbedWindowMovementActiveComponent.hpp  TabbedWindowRemoveRequestComponent.hpp  TabbedWindowResizeActiveComponent.hpp  TabbedWindowResizeHoverComponent.hpp  TabbedWindowResizeRequestComponent.hpp  TabbedWindowRestoreRequestComponent.hpp  TabbedWindowSnapRequestComponent.hpp  TabbedWindowWidget.cpp  TabbedWindowWidget.hpp  TabbedWindowWidgetComponent.cpp  TabbedWindowWidgetComponent.hpp
PolyDock/PolyDock/src/pd/ecs/cmp/tabbedWindowControl/: CloseRequestComponent.hpp  Component.hpp  HoverComponent.hpp  ObserversComponent.hpp  PressComponent.hpp  TabbedWindowControl.hpp  TabbedWindowControlWidget.cpp  TabbedWindowControlWidget.hpp  WidgetComponent.hpp  WidgetUpdateRequestComponent.hpp
PolyDock/PolyDock/src/pd/ecs/cmp/tabsHeader/: ActiveTabComponent.hpp  DirtyTabsHeaderComponent.hpp  HoveredAddButton.hpp  HoveredTabComponent.hpp  HoveredTabsHeaderComponent.hpp  SelectedTabsComponent.hpp  TabsAddRequest.hpp  TabsAdding.hpp  TabsClosing.hpp  TabsDragInRequestComponent.hpp  TabsDragOutRequestComponent.hpp  TabsDragging.hpp  TabsHeader.hpp  TabsHeaderComponent.hpp  TabsHeaderWidget.cpp  TabsHeaderWidget.hpp  TabsHeaderWidgetComponent.cpp  TabsHeaderWidgetComponent.hpp  TabsMovementActiveComponent.hpp  TabsMovementRequestComponent.hpp  TabsRemovalRequest.hpp  TabsRemoving.hpp
PolyDock/PolyDock/src/pd/ecs/sys/: SystemBase.hpp
PolyDock/PolyDock/src/pd/ecs/sys/dock/: DockSystem.cpp  DockSystem.hpp  DockWidgetCreationSystem.cpp  DockWidgetCreationSystem.hpp  DockWidgetRemovalSystem.cpp  DockWidgetRemovalSystem.hpp  DockWidgetUpdateSystem.cpp  DockWidgetUpdateSystem.hpp  DockingUndocking.cpp  DockingUndocking.hpp  UndockSystem.cpp  UndockSystem.hpp
PolyDock/PolyDock/src/pd/ecs/sys/root/: DesktopSystem.cpp  DesktopSystem.hpp  InputSystem.cpp  InputSystem.hpp  WidgetsOwnerSystem.cpp  WidgetsOwnerSystem.hpp
PolyDock/PolyDock/src/pd/ecs/sys/tabbedWindow/: TabbedWindow.cpp  TabbedWindow.hpp  TabbedWindowCloseSystem.cpp  TabbedWindowCloseSystem.hpp  TabbedWindowClosing.cpp  TabbedWindowClosing.hpp  TabbedWindowCreationSystem.cpp  TabbedWindowCreationSystem.hpp  TabbedWindowFocusSystem.cpp  TabbedWindowFocusSystem.hpp  TabbedWindowMaximizeSystem.cpp  TabbedWindowMaximizeSystem.hpp  TabbedWindowMinimizeSystem.cpp  TabbedWindowMinimizeSystem.hpp  TabbedWindowMovement.cpp  TabbedWindowMovement.hpp  TabbedWindowMovementDetectionSystem.cpp  TabbedWindowMovementDetectionSystem.hpp  TabbedWindowMovementEndSystem.cpp  TabbedWindowMovementEndSystem.hpp  TabbedWindowMovementStartSystem.cpp  TabbedWindowMovementStartSystem.hpp  TabbedWindowMovementSystem.cpp  TabbedWindowMovementSystem.hpp  TabbedWindowOpening.cpp  TabbedWindowRemovalSystem.cpp  TabbedWindowRemovalSystem.hpp  TabbedWindowResizeDetectionSystem.cpp  TabbedWindowResizeDetectionSystem.hpp  TabbedWindowResizeEndSystem.cpp  TabbedWindowResizeEndSystem.hpp  TabbedWindowResizeHoverSystem.cpp  TabbedWindowResizeHoverSystem.hpp  TabbedWindowResizeStartSystem.cpp  TabbedWindowResizeStartSystem.hpp  TabbedWindowResizeSystem.cpp  TabbedWindowResizeSystem.hpp  TabbedWindowResizing.cpp  TabbedWindowResizing.hpp  TabbedWindowRestoreSystem.cpp  (+14 more)
PolyDock/PolyDock/src/pd/ecs/sys/tabbedWindowControl/: TabbedWindowControl.cpp  TabbedWindowControl.hpp  TabbedWindowControlActivationSystem.hpp  TabbedWindowControlHoverSystem.cpp  TabbedWindowControlHoverSystem.hpp  TabbedWindowControlPressSystem.cpp  TabbedWindowControlPressSystem.hpp  TabbedWindowControlReleaseSystem.cpp  TabbedWindowControlReleaseSystem.hpp  TabbedWindowControlWidgetInitialization.cpp  TabbedWindowControlWidgetInitializationSystem.cpp  TabbedWindowControlWidgetInitializationSystem.hpp  TabbedWindowControlWidgetUpdate.cpp  TabbedWindowControlWidgetUpdate.hpp  TabbedWindowControlWidgetUpdateSystem.cpp  TabbedWindowControlWidgetUpdateSystem.hpp
PolyDock/PolyDock/src/pd/ecs/sys/tabsHeader/: TabsActivationSystem.cpp  TabsActivationSystem.hpp  TabsAdding.cpp  TabsAdding.hpp  TabsClosing.cpp  TabsClosing.hpp  TabsCreationSystem.cpp  TabsCreationSystem.hpp  TabsDragInDetectionSystem.cpp  TabsDragInDetectionSystem.hpp  TabsDragInSystem.cpp  TabsDragInSystem.hpp  TabsDragOutDetectionSystem.cpp  (+40 more)
PolyDock/PolyDock/src/pd/pch/: PCH.h
PolyDock/TestApp/: CMakeLists.txt
PolyDock/TestApp/src/: Main.cpp
PolyDock/Tests/: CMakeLists.txt
PolyDock/Tests/src/mocks/: MockTabsHeaderWidget.hpp
PolyDock/Tests/src/tabsHeader/: TabsActivationSystemTests.cpp  TabsHeaderHoverSystemTests.cpp  TabsMovementDetectionSystemTests.cpp  TabsMovementEndSystem.cpp  TabsMovementStartSystemTests.cpp  TabsMovementSystem.cpp  TabsSelectionSystemTests.cpp
(+2 files in other folders)
